<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrator.EditProfileActivity">

    <View
        android:id="@+id/blue_background"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#00B6AA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="46dp"
        android:text="@string/profile"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/blue_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blue_background"
        app:layout_constraintVertical_bias="0.294"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/profile_back_button"
        android:layout_width="40dp"
        android:layout_height="22dp"
        android:layout_weight="0.6"
        android:text="Back"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="152dp"
        android:layout_height="175dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blue_background"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ellipse_9" />

    <Button
        android:id="@+id/remove_pic"
        android:layout_width="231dp"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button_background"
        android:shadowColor="#536061"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2.1"
        android:text="Remove Picture"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:text="@string/editable_name"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/blue_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blue_background"
        app:layout_constraintVertical_bias="1.80" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:text="@string/editable_bio"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blue_background"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/participant_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/contact_information"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_background"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        android:id="@+id/editTextText3"
        android:layout_width="332dp"
        android:layout_height="54dp"
        android:layout_marginBottom="96dp"
        android:autofillHints=""
        android:ems="10"
        android:text="Phone: "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/editTextText2"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:text="Email: "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participant_count"
        app:layout_constraintVertical_bias="0.089"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/remove_profile"
        android:layout_width="239dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button_background"
        android:shadowColor="#536061"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2.1"
        android:text="Remove Profile"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />


</androidx.constraintlayout.widget.ConstraintLayout>